--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vueast",
+  "name": "vuaast",
   "description": "View the AST structure of the Vue template syntax online immediately.",
   "type": "module",
   "packageManager": "pnpm@9.12.1",
@@ -12,10 +12,10 @@
   "homepage": "https://vueast.org",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aiktb/vueast.git"
+    "url": "git+https://github.com/aiktb/VueAST.git"
   },
   "bugs": {
-    "url": "https://github.com/aiktb/vueast/issues"
+    "url": "https://github.com/aiktb/VueAST/issues"
   },
   "scripts": {
     "build": "remix vite:build",
@@ -32,19 +32,25 @@
     "@netlify/remix-edge-adapter": "^3.4.2",
     "@netlify/remix-runtime": "^2.3.1",
     "@radix-ui/react-context-menu": "^2.2.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@remix-run/react": "^2.13.1",
     "@vue/compiler-sfc": "^3.5.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "codemirror": "^6.0.1",
     "isbot": "^5.1.17",
+    "next-themes": "^0.3.0",
     "react": "19.0.0-rc-6cf85185-20241014",
     "react-dom": "19.0.0-rc-6cf85185-20241014",
     "react-resizable-panels": "^2.1.4",
     "shiki": "^1.22.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.3",
@@ -65,6 +71,7 @@
     "typescript": "^5.6.3",
     "unplugin-auto-import": "^0.18.3",
     "vite": "^5.4.9",
+    "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^5.0.1"
   }
 }
