--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@codemirror/lang-vue": "^0.1.3",
+    "@codemirror/view": "^6.34.1",
     "@netlify/edge-functions": "^2.11.0",
     "@netlify/remix-edge-adapter": "^3.4.2",
     "@netlify/remix-runtime": "^2.3.1",
@@ -41,15 +42,18 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@remix-run/react": "^2.13.1",
+    "@uiw/codemirror-theme-github": "^4.23.5",
+    "@uiw/react-codemirror": "^4.23.5",
     "@vue/compiler-sfc": "^3.5.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "codemirror": "^6.0.1",
     "isbot": "^5.1.17",
     "next-themes": "^0.3.0",
+    "prettier": "^3.3.3",
     "react": "19.0.0-rc-6cf85185-20241014",
     "react-dom": "19.0.0-rc-6cf85185-20241014",
     "react-resizable-panels": "^2.1.4",
+    "remix-utils": "^7.7.0",
     "shiki": "^1.22.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -64,6 +68,7 @@
     "@fontsource/afacad-flux": "^5.0.1",
     "@fontsource/fira-code": "^5.1.0",
     "@iconify-json/lucide": "^1.2.9",
+    "@iconify-json/radix-icons": "^1.2.1",
     "@remix-run/dev": "^2.13.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
