--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+  "files": {
+    "ignore": ["app/assets/example.vue"]
+  },
   "vcs": {
     "enabled": true,
     "clientKind": "git",
