--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@remix-run/react": "^2.13.1",
     "@uiw/codemirror-theme-github": "^4.23.5",
     "@uiw/react-codemirror": "^4.23.5",
+    "@vue/compiler-core": "^3.5.12",
     "@vue/compiler-sfc": "^3.5.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
